kubernetes/apps/default/vaultwarden/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: bitwarden.png
    gethomepage.dev/name: Bitwarden
    gethomepage.dev/group: Home
    gethomepage.dev/description: Менеджер паролей
spec:
  hostnames: ["pass.astrateam.net"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: vaultwarden
          namespace: default
          port: 80
